Fix wrong height

--- a/webgallery/static/style.css
+++ b/webgallery/static/style.css
@@ -18,7 +18,7 @@ div.gallery img {
 div.thumbnail {
   margin: 3px;
   float: left;
-  height: 250px;
+  height: 200px;
   width: auto;
 }
 
